# TestAssimpForAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testassimpforandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jniCalls/: assimpActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
app/src/main/cpp/nativeCode/common/: assimpLoader.h  myGLFunctions.cpp
app/src/main/java/com/example/testassimpforandroid/: AssimpActivity.java  GestureClass.java  MainActivity.kt  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: assimp_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/testassimpforandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
